# context_semantic_fleet_brain

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  world_builder.py
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  zshrc
.devcontainer/data/qdrant_storage/: raft_state.json
.github/workflows/: api_ci.yml  main_ci.yml
docker/: Dockerfile
docker/scripts/: entrypoint.sh
qdrant_storage/: raft_state.json
scripts/: world_builder.py
src/api/: main.py  pyproject.toml
src/api/agent/: builder.py  nodes.py  state.py
src/api/scripts/: download_model.py
src/api/templates/: index.html
src/api/tests/: conftest.py  test_api.py
src/ros2_edge/fleet_brain_bringup/: package.xml  setup.cfg  setup.py
src/ros2_edge/fleet_brain_bringup/launch/: sim_bridge.launch.py  simulator.launch.py
src/ros2_edge/redis_ros_bridge/: package.xml  setup.cfg  setup.py
src/ros2_edge/redis_ros_bridge/config/: bridge.yaml
src/ros2_edge/redis_ros_bridge/launch/: bridge.launch.py
src/ros2_edge/redis_ros_bridge/redis_ros_bridge/: bridge.py
src/ros2_edge/semantic_sim_env/: CMakeLists.txt  package.xml
src/ros2_edge/semantic_sim_env/config/: simulator.yaml
src/ros2_edge/semantic_sim_env/include/semantic_sim_env/: simulator_node.hpp
src/ros2_edge/semantic_sim_env/launch/: simulator.launch.py
src/ros2_edge/semantic_sim_env/src/: simulator_node.cpp
src/semantic_visualizer/: package.xml  setup.cfg  setup.py
src/semantic_visualizer/semantic_visualizer/: visualizer.py
worlds/: world_config.json
