[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
