[project]
name = "api"
version = "0.1.0"
description = "Semantic Fleet Brain: Agentic Orchestrator for ROS 2 robotic fleets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.137.0",
    "google-genai>=2.9.0",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
    "watchfiles>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 100
target-version = "py313" 

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false 

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "qdrant_client.*",
    "google.genai.*",
    "transformers.*",
    "asyncpg.*"
]
ignore_missing_imports = true