<package format="3">
  <name>semantic_visualizer</name>
  <version>0.0.1</version>
  <description>Visualizer for semantic_sim_env</description>
  <maintainer email="lnz.bnc@gmail.com">Lorenzo Bianchi</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport_py</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport_py</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>