<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redis_ros_bridge</name>
  <version>0.1.0</version>
  <description>Bridge node connecting the Redis task queue to the ROS 2 network for the Semantic Fleet Brain</description>
  <maintainer email="lnz.bnc@gmail.com">Lorenzo Bianchi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-redis</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>