<?xml version="1.0"?>
<package format="3">
  <name>semantic_sim_env</name>
  <version>0.0.1</version>
  <description>Lightweight 3D simulator using Raylib and OpenCV</description>
  <maintainer email="lnz.bnc@gmail.com">Lorenzo Bianchi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
